' MIT License
'
' Permission is hereby granted, free of charge, to any person obtaining a 
' copy of this software and associated documentation files (the "Software"), 
' to deal in the Software without restriction, including without limitation 
' the rights to use, copy, modify, merge, publish, distribute, sublicense, 
' and/or sell copies of the Software, and to permit persons to whom the 
' Software is furnished to do so, subject to the following conditions:
'
' The above copyright notice and this permission notice shall be included in
' all copies or substantial portions of the Software.
'
' THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
' IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
' FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
' AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER 
' LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING 
' FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
' IN THE SOFTWARE.
'
'  Created by Brian Howard
'  Copyright © 2020 InMotion Software, LLC. All rights reserved.
'
@startuml

interface Flow<Input,Output> {
    Output startFlow(Input)
}

interface MoveDelegate {
    willMove()
}
interface BackDelegate {
    shouldPop()
}
interface ViewControllerDelegate {
}
interface FlowResolver<Output> {
    +proxy
    cancel()
    back()
    resolve(Output)
    reject(Error)
}

enum FlowError {
    * canceled
    * back
}

class FlowHostingController<Content> {
    +delegate
}
interface FlowableView {
    attach(Input)
}

class FlowSubController<FlowViewController> {
    + nav: UINavigationController
    + delegate: ViewControllerDelegate
    + viewController: FlowViewController
    + animated: Bool
}

interface FlowViewController {
    +delegate
}

class NavigationStateMachine<Input> {
    - stack: [UIViewController]
    + nav: UINavigationController
    + animated: Bool
    Output attach(Output)
}


FlowViewController <-- FlowHostingController
MoveDelegate <-- ViewControllerDelegate
BackDelegate <-- ViewControllerDelegate
ViewControllerDelegate <-- FlowViewController
Flow <-- FlowViewController
Flow <-- FlowSubController
ViewControllerDelegate <-- FlowSubController
Flow <-- FlowableView
FlowResolver <-- FlowableView


Swift.UIHostingController <-- FlowHostingController7

@enduml